--- a/styles-en.css
+++ b/styles-en.css
@@ -222,6 +222,9 @@
     .educations{
       margin: 0 auto;
     }
+    .educations2{
+      min-width: 65vw;
+    }
     .project-tile{
       height: 28vh;
     }
