change website to under construction

--- a/styles-en.css
+++ b/styles-en.css
@@ -1,261 +1,19 @@
-:root{
-  --color1: RGB(137, 117, 185);
-  --color2: RGB(188, 187, 230);
-  --color3: RGB(162 151 203);
-  --color4: RGB(60, 18, 114);
+*:not(img) {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color:chocolate;
+  background-color: beige;
+  text-align: center;
 }
 
+img:hover {
+  animation: alternate ease-in 2s infinite rotate;
+}
 
-*{
-    font-family: Helvetica, sans-serif;
-    position: relative;
-    scroll-behavior: smooth;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
   }
-  #navbar{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    height: 10vh;
-    width: 100%;
-    position: fixed;
-    font-weight: bold;
-    background-color: var(--color1);
-    top: 0;
-    left: 0;
-    z-index: 999;
+  100% {
+    transform: rotate(360deg);
   }
-  
-  .nav-list{
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding-right: 10vw;
-    text-align: center;
-    font-size: 2.5vh;
-    height: 100%;
-  }
-  .nav-list li{
-    padding: 20px 3vw;
-    top: 10%;
-    text-align: center;
-    color: white;
-  
-  }
-  .nav-list a{
-    text-decoration: none;
-    cursor: pointer;
-    transition: 0.25s;
-  
-  }
-  .nav-list a:hover{
-    background-color: #47398F;
-  }
-  
-  #welcome-section{
-    width: 100%;
-    height: 100vh;
-    text-align: center;
-  
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: var(--color2);
-    color: #EEEAF5;
-  }
-  #welcome-section h1{
-    font-size: 10vh;
-    margin-bottom: 0;
-  }
-  #welcome-section h2{
-    font-size: 5vh;
-    opacity: 90%;
-    color: var(--color4);
-  }
-  #project{
-    width: 100%;
-    height: 130vh;
-    background-color: var(--color3);
-    text-align: center;
-    color: white;
-  }
-  .projects-header{
-    padding-top: 4vh;
-    padding-bottom: 3vh;
-    font-size: 4vh;
-    text-decoration: underline var(--color2) double 1px;
-  }
-  .contact-header{
-    padding-top: 4vh;
-    font-size: 4vh;
-    text-decoration: underline var(--color2) double 1px;
-  }
-  .confidence h3, .education h3{
-    font-size: 4vh;
-    padding-bottom: 3vh;
-  }
-  .project-tile{
-    height: 27vh;
-    width: 90%;
-    border: solid RGBA(85, 33, 113, 0.8) 2px;
-    border-radius: 5px;
-    font-size: 2vh;
-    background-color: RGBA(188, 187, 230, 0.3)
-  }
-  .language{
-    height: 48vh;
-  }
-  .educations{
-    height: 30vh
-  }
-  .software{
-    height: 18vh;
-  }
-  .project-tile h4{
-    font-size: 3vh;
-  }
-  .gridder{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
-    grid-gap: 2rem;
-    width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
-    margin-bottom: 3rem;
-    left: 3%;
-  }
-  hr:nth-of-type(1){
-    margin-top: 0;
-  }
-  .confidence p{
-    display: inline;
-    text-align: left;
-  }
-  hr{
-    color: RGBA(85, 33, 113, 0.8);
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-  }
-  .confidence .line{
-    height: 5%;
-    width: 80%;
-    border-radius: 10px;
-    background-color: lightgray;
-    margin: auto;
-  }
-  .full, .half, .low, .low-half, .high-half{
-    height: 100%;
-    border-radius: inherit;
-    background-color: var(--color4);
-  }
-  .full{
-    width: 100%;
-  }
-  .half{
-    width: 62%;
-  }
-  .low{
-    width: 30%;
-  }
-  .high-half{
-    width: 75%;
-  }
-  .low-half{
-    width: 50%;
-  }
-  
-  a{
-    text-decoration: none;
-    color: inherit;
-  }
-  #contact{
-    width: 100%;
-    height: 50vh;
-    background-color: var(--color1);
-    color: var(--color4); 
-    bottom: 0;
-  }
-  #contact h1{
-    text-align: center;
-  }
-  
-  @media screen and (max-width: 700px){
-    #project{
-      height: 220vh;
-    }
-    .gridder{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        left: 0%;
-      }
-      .project-tile{
-        min-width: 90%;
-      }
-      .educations{
-        margin: 0 auto;
-      }
-      .educations2{
-        min-width: 85vw;
-      }
-      .project-tile{
-        height: 28vh;
-      }
-      .language{
-        height: 50vh;
-      }
-      .educations{
-        height: 30vh;
-      }
-      .software{
-        height: 20vh;
-      }
-    }
-  @media screen and (max-width: 400px){
-    #project{
-      height: 220vh;
-    }
-    .educations{
-      margin: 0 auto;
-    }
-    .educations2{
-      min-width: 65vw;
-    }
-    .project-tile{
-      height: 28vh;
-    }
-    .language{
-      height: 50vh;
-    }
-    .educations{
-      height: 32vh;
-    }
-    .software{
-      height: 19vh;
-    }
-  }
-  @media screen and (min-width: 1050px){
-    #project{
-      height: 130vh;
-    }
-  }
-  .contact-links {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    flex-wrap: wrap;
-  }
-  .contact-details{
-    padding: 3vh;
-    font-size: 3vh;
-    transition: transform 0.3s ease-out;
-  }
-  .contact-details:hover {
-    transform: translateY(8px);
-  }
+}
